--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "DISABLE_ESLINT_PLUGIN=true CI=false react-app-rewired --max_old_space_size=8192 build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
