package updated engine added

--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
