--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -64,7 +64,7 @@ jobs:
         name: "Deploy to App Engine"
         uses: "google-github-actions/deploy-appengine@v1"
         with:
-          deliverables: app.yaml
+          deliverables: app.yaml,dispatch.yaml
           project_id: ${{ secrets.GCP_PROJECT }}
 
       - name: "Check Deployment"
