--- a/.github/workflows/thirdparty_v2.yaml
+++ b/.github/workflows/thirdparty_v2.yaml
@@ -3,7 +3,6 @@ name: Deploy Third-Party v2 on GCP.
 on:
   push:
     branches: [staging]
-
   workflow_dispatch:
 jobs:
   build:
@@ -64,7 +63,7 @@ jobs:
         name: "Deploy to App Engine"
         uses: "google-github-actions/deploy-appengine@v1"
         with:
-          deliverables: thirdparty_v2.yaml
+          deliverables: thirdparty_v2.yaml,dispatch.yaml
           project_id: ${{ secrets.GCP_PROJECT }}
 
       - name: "Check Deployment"
