--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -4,3 +4,12 @@ dispatch:
 
   - url: "gwi.dev.impactscope.com/*"
     service: thirdparty
+
+  - url: "gwi-admin.dev.impactscope.com/*"
+    service: frontend
+
+  - url: "gwi-admin.impactscope.com/*"
+    service: frontend-v2
+
+  - url: "gwi-demo.impactscope.com/*"
+    service: gwi-demo
